--- a/src/components/episodes/episodes.modules.css
+++ b/src/components/episodes/episodes.modules.css
@@ -1,10 +1,19 @@
-.episodesContainer {
+.showEpisodesContainer {
   display: flex;
   flex-direction: column;
-  align-items: center;
+  border-top: 1px solid var(--grey-03);
+  border-left: 1px solid var(--grey-03);
+  width: 100%;
+}
+
+.episodesListTitle {
+  padding: 5px;
+  background-color: var(--grey-02);
+  border-bottom: 1px solid var(--grey-04);
 }
 
 .episodesList {
   display: flex;
   flex-direction: column;
+  padding: 10px;
 }
