--- a/src/components/characters/characters.modules.css
+++ b/src/components/characters/characters.modules.css
@@ -3,6 +3,7 @@
   flex-direction: column;
   align-items: center;
   margin-top: 20px;
+  padding: 0 20px;
 }
 
 .showCharactersTitleAndInput {
@@ -34,12 +35,11 @@
   border: 1px solid var(--green);
   cursor: pointer;
   background-color: white;
+  margin-left: 5px;
 }
 
 .pagination__link {
   font-weight: bold;
-  margin-left: 5px;
-  margin-right: 5px;
 }
 
 .pagination__link--active a {
