--- a/src/lib/base.css
+++ b/src/lib/base.css
@@ -49,6 +49,7 @@ button {
   background-color: var(--grey-01);
   background-image: radial-gradient(var(--green) 1.1px, var(--grey-01) 1.1px);
   background-size: 22px 22px;
+  padding-top: 70px;
 }
 
 .episodesContainer {
